--- a/ScrambledPass.DesktopApp/Views/GeneratorView.axaml
+++ b/ScrambledPass.DesktopApp/Views/GeneratorView.axaml
@@ -12,20 +12,21 @@
 		<vm:GeneratorViewModel />
 	</Design.DataContext>
 
-	<StackPanel>
-		<StackPanel>
-			<CheckBox x:Name="EnableRandomWords" Content="{lang:Localize EnableRandomWords}" Margin="10,10,0,0" IsChecked="True" Click="ToggleWordPanel"/>
-			<StackPanel x:Name="WordPanel" HorizontalAlignment="Left" Margin="30,0,0,0" Width="248" Spacing="5">
-				<StackPanel Orientation="Horizontal" Spacing="10">
+	<Grid RowDefinitions="Auto, Auto, *, Auto, Auto">
+		<StackPanel Grid.Row="0">
+			<CheckBox Content="{lang:Localize EnableRandomWords}" Margin="10,10,0,0" IsChecked="True" Click="ToggleWordPanel"/>
+			<StackPanel x:Name="WordPanel" Theme="{DynamicResource PanelContainer}" HorizontalAlignment="Stretch" Margin="30,0,0,0" Spacing="5">
+				<StackPanel Orientation="Horizontal" Spacing="10" HorizontalAlignment="Stretch">
 					<Label Content="{lang:Localize CharacterCount}"/>
-					<NumericUpDown x:Name="WordCount" Height="23" Width="200" Value="{Binding Generator.Parameters.WordCount}" FormatString="0" Minimum="1"/>
+					<NumericUpDown x:Name="WordCount" Height="23" HorizontalAlignment="Stretch" Value="{Binding Generator.Parameters.WordCount}" FormatString="0" Minimum="1"/>
 				</StackPanel>
 				<CheckBox Content="{lang:Localize EnableRandomLetterSize}" IsChecked="{Binding Generator.Parameters.RandomizeLetterSize}"/>
 			</StackPanel>
 		</StackPanel>
-		<StackPanel>
-			<CheckBox x:Name="EnableRandomCharacters" Content="{lang:Localize EnableRandomCharacters}" Margin="10,10,0,0" IsChecked="True" Click="ToggleSymbolPanel"/>
-			<StackPanel x:Name="CharacterPanel" Margin="30,0,0,0" Spacing="10">
+		<StackPanel Grid.Row="1">
+			<Separator Height="10" Opacity="0"/>
+			<CheckBox Content="{lang:Localize EnableRandomCharacters}" Margin="10,10,0,0" IsChecked="True" Click="ToggleSymbolPanel"/>
+			<StackPanel x:Name="CharacterPanel" Theme="{DynamicResource PanelContainer}" HorizontalAlignment="Stretch" Margin="30,0,0,0" Spacing="10">
 				<StackPanel Orientation="Horizontal" Spacing="5">
 					<Label Content="{lang:Localize CharacterCount}" />
 					<NumericUpDown x:Name="CharacterCount" HorizontalAlignment="Left" Height="23" Width="200" Value="{Binding Generator.Parameters.SymbolCount}" FormatString="0" Minimum="1"/>
@@ -44,31 +45,35 @@
 				<CheckBox x:Name="EnableSymbols" Content="{lang:Localize Symbols}" IsChecked="{Binding Generator.Parameters.UseSymbols}"/>
 			</StackPanel>
 		</StackPanel>
-		<Separator Height="100" Opacity="0"/>
-		<StackPanel>
-			<StackPanel Orientation="Horizontal" Height="50">
-				<Label Content="{lang:Localize Password}" Margin="12,0,0,0" VerticalAlignment="Center"/>
-				<TextBox x:Name="Password" Height="23" Width="350" Margin="10,0" VerticalAlignment="Center"/>
-			</StackPanel>
+		<Separator Height="10" Opacity="0" Grid.Row="2"/>
+		<StackPanel Grid.Row="3">
 			<StackPanel Height="50">
 				<Label x:Name="PasswordEntropy" HorizontalContentAlignment="Right" Height="22" Padding="5,5,15,-11"/>
 				<Label x:Name="PasswordStrength" HorizontalContentAlignment="Right" Height="22" Padding="5,5,15,-11"/>
 			</StackPanel>
+			<StackPanel Orientation="Horizontal" Height="50">
+				<Label Content="{lang:Localize Password}" Margin="12,0,0,0" VerticalAlignment="Center"/>
+				<TextBox x:Name="Password" Height="23" Width="350" Margin="10,0" VerticalAlignment="Center"/>
+			</StackPanel>
 		</StackPanel>
-		<StackPanel Orientation="Horizontal" Margin="5,5,5,5">
-			<Button Content="{lang:Localize Generate}" HorizontalAlignment="Left" Click="GeneratePassword"/>
-			<Button Content="{lang:Localize Randomize}" HorizontalAlignment="Left" Click="RandomizeParameters"/>
-			<Separator Margin="0" Opacity="0" Width="270"/>
-			<Button HorizontalAlignment="Left" Margin="10,0,0,0" Height="20" Width="20" Click="OpenFilePicker">
-					<Button.Background>
-						<ImageBrush Source="/Assets/Icons/open_file.PNG" Stretch="Uniform"/>
-					</Button.Background>
-			</Button>
-			<Button HorizontalAlignment="Right" Margin="10,0,0,0" Height="20" Width="20" Click="ResetWordList">
-					<Button.Background>
-						<ImageBrush Source="/Assets/Icons/reload.png" Stretch="Uniform"/>
-					</Button.Background>
-			</Button>
-        </StackPanel>
-	</StackPanel>
+		<Grid ColumnDefinitions="Auto, *, Auto" Grid.Row="4">
+			<StackPanel Orientation="Horizontal" Margin="5,5,5,5" Grid.Column="0">
+				<Button Content="{lang:Localize Generate}" HorizontalAlignment="Left" Click="GeneratePassword"/>
+				<Button Content="{lang:Localize Randomize}" HorizontalAlignment="Left" Click="RandomizeParameters"/>
+			</StackPanel>
+			<Separator Margin="10" Opacity="0" HorizontalAlignment="Stretch" Grid.Column="1"/>
+			<StackPanel Orientation="Horizontal" Grid.Column="2">
+				<Button HorizontalAlignment="Left" Margin="10,0,0,0" Height="20" Width="20" Click="OpenFilePicker">
+						<Button.Background>
+							<ImageBrush Source="/Assets/Icons/open_file.PNG" Stretch="Uniform"/>
+						</Button.Background>
+				</Button>
+				<Button HorizontalAlignment="Right" Margin="10,0,0,0" Height="20" Width="20" Click="ResetWordList">
+						<Button.Background>
+							<ImageBrush Source="/Assets/Icons/reload.png" Stretch="Uniform"/>
+						</Button.Background>
+				</Button>
+			</StackPanel>
+        </Grid>
+	</Grid>
 </UserControl>
