--- a/ScrambledPass.DesktopApp/Views/MainWindow.axaml
+++ b/ScrambledPass.DesktopApp/Views/MainWindow.axaml
@@ -3,7 +3,7 @@
         xmlns:vm="using:ScrambledPass.DesktopApp.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="250" d:DesignHeight="400"
+        mc:Ignorable="d" MinWidth="520" MinHeight="600" VerticalContentAlignment="Stretch" SizeToContent="WidthAndHeight"
         x:Class="ScrambledPass.DesktopApp.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
