--- a/ScrambledPass.DesktopApp/Views/SettingsView.axaml
+++ b/ScrambledPass.DesktopApp/Views/SettingsView.axaml
@@ -11,8 +11,8 @@
 		<vm:SettingsViewModel />
 	</Design.DataContext>
 
-    <Grid>
-        <StackPanel Spacing="10">
+    <Grid RowDefinitions="Auto, *, Auto">
+        <StackPanel Spacing="10" Grid.Row="0">
             <StackPanel Orientation="Horizontal" Margin="0,10">
                 <Label Content="{lang:Localize Language}"/>
                 <ComboBox ItemsSource="{Binding LanguageList}" SelectedIndex="{Binding AppSettings.SelectedLanguage}"/>
@@ -41,10 +41,11 @@
                     <TextBox HorizontalAlignment="Left" Text="25" VerticalAlignment="Center" Width="40"/>
                 </StackPanel>
             </StackPanel>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,10,5" >
-                <Button Content="{lang:Localize Save}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="5,2" Click="SaveSettings" Margin="0,0,10,0"/>
-                <Button Content="{lang:Localize RestoreDefault}" HorizontalAlignment="Right" VerticalAlignment="Bottom" Padding="5,2" Click="RestoreDefaultSettings" Margin="0,0,10,0"/>
-            </StackPanel>
+        </StackPanel>
+		<Separator Height="10" Opacity="0" Grid.Row="1"/>
+        <StackPanel Orientation="Horizontal" Margin="0,0,10,5" Grid.Row="2">
+            <Button Content="{lang:Localize Save}" Padding="5,2" Click="SaveSettings" Margin="0,0,10,0"/>
+            <Button Content="{lang:Localize RestoreDefault}" Padding="5,2" Click="RestoreDefaultSettings" Margin="0,0,10,0"/>
         </StackPanel>
     </Grid>
 </UserControl>
